--- a/TikTok.conf
+++ b/TikTok.conf
@@ -1,6 +1,8 @@
-hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com
+hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,mp.weixin.qq.com
 
 # TikTok By xiaoadou
 (?<=_region=)CN(?=&) url 307 US
 (?<=&mcc_mnc=)4 url 307 2
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
+
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/xqxrrz1ge2/QuantumultX/master/wechat.js
